test/sema/assign-undefined-in-method.delta.output
assign-undefined-in-method.delta:8:13: error: 'undefined' is only allowed as an initial value
        i = undefined;
            ^
