test/sema/assign-undefined-in-method.delta
// RUN: %check_errors %not %delta -typecheck %s

struct A {
    int i;

    void f() {
        // CHECK: [[@LINE+1]]:13: error: 'undefined' is only allowed as an initial value
        i = undefined;
    }
}
